[package]
name = "gamesense_clock"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
chrono = "0.4.23"
gamesense = "0.1.2"
serde_json = "1.0.91"

[profile.release]
opt-level = 3
debug = false
split-debuginfo = 'packed'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
